inits single node setup